homeautomation/appdaemon-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: appdaemon
    app.kubernetes.io/instance: homeautomation
  name: appdaemon
  namespace: homeautomation
spec:
  host: appdaemon.apps.snolab.csfreak.com
  port:
    targetPort: 5050
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: appdaemon
    weight: 100
  wildcardPolicy: None
